added highlight on selection change

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             .cell {width: 150px; float: left; position: relative}
             .cellWithButton {width: 220px; float: left; position: relative}
             div {position: static;}
-
+            .selected{color: red;}
             .header {font-size: 14pt;font-weight: bold;}
             .selectionHeader {font-size: 12pt;font-weight: bold;}
             span {  position: relative;
