--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <!--&lt;!&ndash; Latest compiled and minified JavaScript &ndash;&gt;-->
         <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
         <style type="text/css">
-
+            body, table {font-family: sans-serif; font-size: 10pt;}
             .cell {width: 150px; float: left; position: relative}
             .cellWithButton {width: 220px; float: left; position: relative}
+            .selectionDiv {margin: 10px;}
             div {position: static;}
             .selected{color: red;}
             .header {font-size: 14pt;font-weight: bold;}
